# snake-game

./: .gitignore  README.md  game_engine.py  main.py  main_rl.py  pyproject.toml  records.csv  requirements.txt  snake.py  util.py
snake_rl/: __init__.py  agent.py  config.py  environment.py  logging_setup.py  state.py  trainer.py  utils.py  visualizer.py
